--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="#">Caracteristicas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="#">Precio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
+            <a class="nav-link disabled">Deshabilitado</a>
           </li>
         </ul>
       </div>
@@ -50,7 +50,7 @@
         <div class="card">
           <img src="assets/img/cupon-1.jpg" class="card-img-top" alt="plumones">
           <div class="card-body">
-            <h5 class="card-title">Plumón Coral Fleece estampado en modelo y tamaño a elección</h5>
+            <h5 class="card-title">Primer Commit</h5>
             <p class="card-text"><small class="text-muted">Plumones Manolino</small></p>
             <p class="card-text"><i class="fas fa-map-marker-alt fa-xs"></i><small class="text-muted">9191 Avenida Vitacura, Chile</small></p>
             <hr>
